test/caffeine_lang/corpus/frontend/parser/errors/refinement_missing_x.caffeine
Blueprints for "SLO"
  * "test":
    Requires { env: String { | x in { "a" } } }
    Provides { value: "x" }
